--- a/templates/play.html
+++ b/templates/play.html
@@ -1,9 +1,32 @@
+<html>
+        <head>
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+    <script>
+        $('.button').click(function() {
+    $.ajax({
+        url: "",
+        context: document.body,
+        success: function(s,x){
+
+            $('html[manifest=saveappoffline.appcache]').attr('content', '');
+                $(this).html(s);
+        }
+    });
+    alert("hi");
+});
+</script>
+</head>
+<body>
+
+
 {% extends 'base.html' %}
 {% block play %}
-
 <h3> {{ title }} </h3>
         <audio controls autoplay>
                 <source src="/media/{{ music_file }}" type="audio/mp3">
                 Your browser does not support this audio format.
         </audio>
-{% endblock %}
+{% endblock %}
+
+
+</body>
