--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,7 @@
     <head>
         <!-- Latest compiled and minified CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <link href="https://fonts.googleapis.com/css?family=Love+Ya+Like+A+Sister" rel="stylesheet"> 
         <link rel="stylesheet" href="../static/css/main.css">
     </head>
     <body>
