adding comments, final push to heroku

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,5 @@
+<!-- Written by Javar A. Daniel C, Maria L. Webpage template for the chatbot -->
+
 <html>
     <head>
         <!-- Latest compiled and minified CSS -->
