--- a/templates/play.html
+++ b/templates/play.html
@@ -1,3 +1,5 @@
+<!-- Written by Javar A. Daniel C, Maria L. Here we are passing the sound file to the client. -->
+
 <html>
         <head>
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
@@ -12,7 +14,6 @@
                 $(this).html(s);
         }
     });
-    alert("hi");
 });
 </script>
 </head>
